# civic_access_index

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging.py  main.py
app/analysis/: __init__.py  explanations.py  metrics.py  percentiles.py  scoring.py
app/api/: dependencies.py  schemas.py
app/api/routes/: admin.py  amenities.py  health.py  ingestion_runs.py  scores.py  search.py  tracts.py
app/cache/: invalidation.py  keys.py
app/db/: session.py
app/db/migrations/: README.md  env.py
app/db/models/: __init__.py  access_metric.py  access_score.py  amenity.py  census_tract.py  data_quality_issue.py  data_source.py  ingestion_run.py  (+3 more)
app/ingestion/: __init__.py  base.py  lifecycle.py  rate_limits.py  registry.py  snapshots.py  validators.py
app/normalization/: __init__.py  addresses.py  categories.py  census.py  geospatial.py  providers.py
app/observability/: health.py  metrics.py
app/search/: __init__.py  indexing.py  mappings.py  queries.py
app/workers/: celery_app.py
docs/: api_examples.md  architecture.md  data_sources.md  operations.md  scoring_methodology.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  useDashboardState.ts
scripts/: export_demo_snapshot.py  load_local_seed_data.py  recompute_scores.py  run_ingestion.py
tests/: test_ingestion_milestone2.py  test_ingestion_milestone3.py  test_metrics_milestone4.py  test_scoring.py  test_scoring_milestone5.py
(+29 files in other folders)
