[project]
name = "civic-access-index"
version = "0.1.0"
description = "A geospatial data platform for census-tract-level civic access metrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "fastapi>=0.115",
    "geoalchemy2>=0.15",
    "geopandas>=1.0",
    "httpx>=0.27",
    "orjson>=3.10",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-json-logger>=2.0",
    "redis>=5.0",
    "shapely>=2.0",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
search = ["opensearch-py>=2.6"]
aws = ["boto3>=1.34"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
